Говноверсия третьей лабы(ну то есть с небольшими недочетами)

--- a/WEB_253504_Novikov.UI/WEB_253504_Novikov.UI.csproj
+++ b/WEB_253504_Novikov.UI/WEB_253504_Novikov.UI.csproj
@@ -14,11 +14,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Images\" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
+    <ProjectReference Include="..\WEB_253504_Novikov.Domain\WEB_253504_Novikov.Domain.csproj" />
   </ItemGroup>
 
 </Project>
